[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/window/Window-1.png" type="Texture" id=2]
[ext_resource path="res://games/game-3/scripts/Questions.gd" type="Script" id=3]
[ext_resource path="res://ui/window/Windows_04.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0.521569, 0, 1, 1 )
font_data = ExtResource( 1 )

[node name="Questions" type="Control"]
margin_right = 528.0
margin_bottom = 768.0
rect_scale = Vector2( 1.3, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="window" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 517.0
margin_bottom = 68.0
rect_min_size = Vector2( 500, 500 )
rect_scale = Vector2( 0.5, 0.9 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="code" type="Control" parent="window"]
anchor_left = 0.5
anchor_top = 0.49
anchor_right = 0.5
anchor_bottom = 0.49
margin_left = -410.5
margin_top = -311.862
margin_right = 421.5
margin_bottom = 212.138
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_window" type="TextureRect" parent="window"]
margin_left = 16.0
margin_top = 728.889
margin_right = 1008.0
margin_bottom = 826.889
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="user_input" type="LineEdit" parent="window/input_window"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -80.2222
margin_right = -64.0
margin_bottom = -18.2222
custom_fonts/font = SubResource( 1 )
align = 1
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="window/input_window/user_input" to="." method="_on_user_input_text_entered"]
